--- a/src/main/resources/templates/bbsview.html
+++ b/src/main/resources/templates/bbsview.html
@@ -8,5 +8,6 @@
 <h1 th:text="${bbs.title}">제목입니다.</h1>
 <p th:text="${bbs.content}">내용이 들어갈 부분입니다.</p>
 <a th:href="@{/bbs/delete(id=${bbs.id})}">글 삭제</a>
+<a th:href="@{/bbs/modify/{id}(id=${bbs.id})}">수정</a>
 </body>
 </html>
