--- a/src/main/resources/templates/bbswrite.html
+++ b/src/main/resources/templates/bbswrite.html
@@ -25,9 +25,10 @@
 </style>
 <body>
     <div class="layout">
-        <form action="/bbs/writepro" method="post">
+        <form action="/bbs/writepro" method="post" enctype="multipart/form-data">
             <input name="title" type="text">
             <textarea name="content"></textarea>
+            <input type="file" name="file">
             <button type="submit">작성</button>
         </form>
     </div>
